...
                            <rect key="frame" x="-2" y="0.0" width="303" height="28"/>
                            <textFieldCell key="cell" title="What have you done the last {DURATION} (since {TIME})?" id="MHs-V5-IyC">
                                <font key="font" metaFont="label" size="11"/>
                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                            </textFieldCell>
                            <accessibility identifier="durationheader"/>
                        </textField>
                        <customView verticalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="maZ-n4-VKP" userLabel="Spacer">
                            <rect key="frame" x="305" y="4" width="50" height="24"/>
                        </customView>
                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="HC6-YQ-v0e" userLabel="Snooze buttonopts">
                            <rect key="frame" x="361" y="14" width="130" height="14"/>
...
                                        <font key="font" metaFont="menu" size="9"/>
                                    </buttonCell>
                                    <connections>
                                        <action selector="snoozeButtonPressed:" target="-2" id="GfF-m3-O9M"/>
                                    </connections>
                                </button>
                                <popUpButton identifier="snoozeopts" translatesAutoresizingMaskIntoConstraints="NO" id="2d3-tf-ady" userLabel="Snooze options">
                                    <rect key="frame" x="113" y="0.0" width="17" height="14"/>
                                    <constraints>
                                        <constraint firstAttribute="width" secondItem="2d3-tf-ady" secondAttribute="height" multiplier="1.25:1" id="B6H-b1-avb"/>
                                    </constraints>
                                    <popUpButtonCell key="cell" type="square" bezelStyle="shadowlessSquare" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" arrowPosition="arrowAtCenter" id="XN4-G0-EmL">
                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
...
                                                <menuItem title="tag:+1h30m" tag="90" id="BbM-Gt-GCN" userLabel="+1h30m"/>
                                                <menuItem isSeparatorItem="YES" id="Fju-ZH-G90"/>
                                                <menuItem title="until tomorrow" id="qvY-Zm-z6P">
                                                    <modifierMask key="keyEquivalentModifierMask"/>
                                                </menuItem>
                                                <menuItem isSeparatorItem="YES" id="llj-na-JYd"/>
                                                <menuItem title="Skip this session" id="rJf-mO-GWd">
                                                    <modifierMask key="keyEquivalentModifierMask"/>
                                                    <connections>
                                                        <action selector="handleSkipSessionButton:" target="-2" id="5PZ-ZC-krg"/>
                                                    </connections>
                                                </menuItem>
                                            </items>
...
                        </button>
                        <button verticalHuggingPriority="750" horizontalCompressionResistancePriority="150" verticalCompressionResistancePriority="150" translatesAutoresizingMaskIntoConstraints="NO" id="tkS-gq-Cbs" userLabel="Prefs Button">
                            <rect key="frame" x="520" y="14" width="14" height="14"/>
                            <constraints>
                                <constraint firstAttribute="width" secondItem="tkS-gq-Cbs" secondAttribute="height" multiplier="1:1" id="8lS-9s-VYO"/>
                            </constraints>
                            <buttonCell key="cell" type="smallSquare" title="Preferences" bezelStyle="smallSquare" image="NSAdvanced" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="69E-e8-wPO">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
                            </buttonCell>
                            <accessibility description="Preferences"/>
                            <connections>
                                <action selector="preferenceButtonPressed:" target="-2" id="8XC-SQ-bNP"/>
...
                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title=":" id="Udq-Yr-mqt">
                                <font key="font" metaFont="system"/>
                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                            </textFieldCell>
                        </textField>
                        <textField identifier="nfield" verticalHuggingPriority="750" verticalCompressionResistancePriority="850" translatesAutoresizingMaskIntoConstraints="NO" id="6A0-cK-Vnh" userLabel="Notes text" customClass="WhatdidTextField" customModule="whatdid" customModuleProvider="target">
                            <rect key="frame" x="299" y="84" width="240" height="21"/>
                            <textFieldCell key="cell" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="notes" drawsBackground="YES" id="iON-DT-Jnl">
                                <font key="font" metaFont="system"/>
                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                            </textFieldCell>
...
