...
            self.projectField.stringValue = prev.project
            self.taskField.stringValue = prev.task
            self.noteField.stringValue = prev.notes
            self.closeFind(self)
        }
        projectTaskFinder.isHidden = true
        projectTaskFinder.setAccessibilityIdentifier("ptn_find")
        projectTaskFinder.setAccessibilityRole(.group)
        
        if let view = view as? PtnTopLevelStackView {
            view.parent = self
        } else {
            wdlog(.warn, "Couldn't set top-level stack view's parent to self")
...

            You cannot undo this action.

            If you took a break, consider recording it as such. For example:
            break / social media / looking at friends' pictures
            """
            confirm.proceedButtonText = "Skip session"
            confirm.cancelButtonText = "Don't skip"
            confirm.onProceed = skipSession
            showConfirmation()
        } else {
            wdlog(.warn, "can't find window to post confirmation alert in skipSession. Will proceed with skipping session.")
            skipSession()
        }
...
